# zelen

./: .gitignore  AGPRICE_MISSING_CONSTRAINTS.md  Cargo.toml  ENUM_IMPLEMENTATION.md  FLATZINC_MIGRATION.md  FLOAT_CONSTANT_HANDLING.md  IMPLEMENTATION_TODO.md  INTEGRATION_COMPLETE.md  LICENSE  README.md  selen_modulo_test.rs  test_problems.sh  zelen.msc
.cargo/: config.toml
docs/: ARRAY_API_IMPLEMENTATION.md  CONSTRAINT_SUPPORT.md  ENUM_OUTPUT_FORMATTING.md  EXPORT_FEATURE.md  EXPORT_TO_SELEN.md  FLATZINC.md  FLOAT_SUPPORT_STATUS.md  GREAT_SUCCESS_SUMMARY.md  LOAN_PROBLEM_ANALYSIS.md  MZN.md  MZNLIB_FINAL_ORGANIZATION.md  MZNLIB_IMPLEMENTATION_COMPLETE.md  MZN_CORE_SUBSET.md  PHASE3_PLAN.md  PROJECT_STRUCTURE.md  SELEN_API_CORRECTION_SUMMARY.md  SELEN_API_FIXES.md  SELEN_BOUND_INFERENCE.md  SELEN_COMPLETE_STATUS.md  SELEN_EXPORT_GUIDE.md  SELEN_IMPLEMENTATION_STATUS.md  SELEN_MISSING_FEATURES.md  SESSION_SUCCESS_OCT5.md  TEST_RESULTS_ANALYSIS.md  TODO_SELEN_INTEGRATION.md  ZELEN_BUG_REPORT_MISSING_ARRAYS.md  ZINC.md
examples/: bool_float_demo.rs  boolean_logic_demo.rs  clean_api.rs  compiler_demo.rs  enhanced_statistics.rs  flatzinc_output.rs  flatzinc_simple.rs  multiple_solutions.rs  optimization_test.rs  parser_demo.rs  queens4.rs  simple_constraints.rs  simple_usage.rs  solve_nqueens.rs  solver_demo.rs  spec_compliance.rs  statistics_units.rs  sudoku.rs  test_forall.rs
examples/models/: sudoku.mzn  test_cli.mzn  test_data.dzn  test_data2.dzn  test_model.mzn  test_model2.mzn
share/minizinc/solvers/: zelen.msc
share/minizinc/zelen/: fzn_all_different_int.mzn  fzn_array_bool.mzn  fzn_array_float.mzn  fzn_array_int.mzn  fzn_at_least_int.mzn  fzn_at_most_int.mzn  fzn_bool.mzn  fzn_bool_lin_eq.mzn  fzn_cumulative.mzn  fzn_exactly_int.mzn  fzn_float.mzn  fzn_float_lin_eq.mzn  fzn_float_lin_eq_reif.mzn  fzn_global_cardinality.mzn  fzn_int.mzn  fzn_int_element.mzn  fzn_int_lin_eq.mzn  fzn_int_lin_eq_reif.mzn  fzn_lex_less_int.mzn  fzn_nvalue.mzn  fzn_set_in.mzn  fzn_sort.mzn  redefinitions.mzn
src/: ZELEN_MIGRATION_GUIDE.md  ast.rs  compiler.rs  error.rs  exporter.rs  exporter.rs.backup  integration.rs  lexer.rs  lib.rs  main.rs  mapper.rs  output.rs  parser.rs  solver.rs  tokenizer.rs  translator.rs
src/mapper/: constraint_mappers.rs  helpers.rs
src/mapper/constraints/: arithmetic.rs  array.rs  boolean.rs  boolean_linear.rs  cardinality.rs  comparison.rs  counting.rs  element.rs  float.rs  global.rs  global_cardinality.rs  linear.rs  mod.rs  reified.rs  (+1 more)
tests/: element_test.rs  main_tests.rs  phase2_demo.rs  phase3_demo.rs  selen_modulo_two_vars.rs  test_flatzinc_batch_01.rs  test_flatzinc_batch_02.rs  test_flatzinc_batch_03.rs  test_flatzinc_batch_04.rs  test_flatzinc_batch_05.rs  test_flatzinc_batch_06.rs  test_flatzinc_batch_07.rs  test_flatzinc_batch_08.rs  test_flatzinc_batch_09.rs  test_flatzinc_batch_10.rs  test_flatzinc_examples.rs  test_flatzinc_integration.rs  test_flatzinc_mapper_features.rs  test_forall.rs  test_parser.rs  test_translate.rs  verify_modulo_fix.rs
tests_all/: element_test.rs  phase2_demo.rs  phase3_demo.rs  selen_modulo_two_vars.rs  test_2d_grid.rs  test_3d_arrays.rs  test_array2d_array3d.rs  test_enums.rs  test_forall.rs  test_output_formatting.rs  test_parser.rs  test_translate.rs  test_variable_indexing.rs  verify_modulo_fix.rs
tests_all/models/: README.md  test_2d_grid.mzn  test_3d_cube.mzn  test_array2d_basic.mzn  test_array2d_error_mismatch.mzn  test_array2d_floats.mzn  test_array3d_basic.mzn  test_enum_2d.mzn  test_enum_array.mzn  test_enum_basic.mzn  test_enum_comprehensive.mzn  test_enum_demo.mzn  test_enum_var.mzn
